@@ -1,3 +1,7 @@
+2008-11-16  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/backend.rb: backend service for application.
+
 2008-11-15  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/htmlview.rb: HTML embedded view.
